[package]
name = "user-api"
authors = ["uhansen <uffe.hansen@gmail.com>"]
description = "Api for users"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
anyhow = "1"
spin-sdk = "3.1.0"
build_html = "2.4.0"
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"

[workspace]
